--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <mpage-developer-component-template title="Clinical Office 5 Component Test"></mpage-developer-component-template>
+  <fhir-week-1 title="Clinical Office 5 Component Test"></fhir-week-1>
 </body>
 </html>
